areglo del model